Added media folder with assets

--- a/Parallax-website-Seedhemaut-main/index.html
+++ b/Parallax-website-Seedhemaut-main/index.html
@@ -13,9 +13,9 @@
         <!--first view-->
         <div class="container">
             <video autoplay muted loop playsinline class="background">
-                <source src="../media/main.mp4" type="video/mp4">
+                <source src="media/main.mp4" type="video/mp4">
             </video>
-            <img src="../media/foreground.png" class="foreground">
+            <img src="media/foreground.png" class="foreground">
             <h1>SEEDHE MAUT</h1>
         </div>
 
@@ -50,37 +50,37 @@
                 <div class="albums">
                     <figure class="cards">
                         <a href="https://open.spotify.com/album/2Jc0evKv7asNZMx32rQHrF?si=Y_TcBqpoT6-jJzROJ_AFnw" target="_blank">
-                            <img src="../media/DL91FM.jpeg">
+                            <img src="media/DL91FM.jpeg">
                         </a>
                         <figcaption>DL91FM</figcaption>
                     </figure>
                     <figure class="cards">
                         <a href="https://open.spotify.com/album/6jgP3YiYzMadVp5XT3FD08?si=jkWTkWs3SjevZ77NVJg-nA" target="_blank">
-                            <img src="../media/kshama.jpeg">
+                            <img src="media/kshama.jpeg">
                         </a> 
                         <figcaption>KSHAMA</figcaption>
                     </figure>
                     <figure class="cards">
                         <a href="https://open.spotify.com/album/6Mwca6sXGKb25VkAc1e6X3?si=GfAafH6ASre1Wc1NhtJBeg" target="_blank">
-                            <img src="../media/shakti.jpeg">
+                            <img src="media/shakti.jpeg">
                         </a> 
                         <figcaption>SHAKTI</figcaption>
                     </figure>
                     <figure class="cards">
                         <a href="https://open.spotify.com/album/16PSZwABl4VFJvfDFOPOoB?si=rRaTP8KIQQiGnUVLNtsnHQ" target="_blank">
-                            <img src="../media/LUNCHBREAK.jpeg">
+                            <img src="media/LUNCHBREAK.jpeg">
                         </a> 
                         <figcaption>LUNCH BREAK</figcaption>
                     </figure>
                     <figure class="cards">
                         <a href="https://open.spotify.com/album/5SZjSdWntcF9lUxWwW4Q9I?si=DgbMGnRJQ020MD3sY97cjg" target="_blank">
-                            <img src="../media/nayaab.jpeg">
+                            <img src="media/nayaab.jpeg">
                         </a>
                         <figcaption>NAYAAB</figcaption>
                     </figure>
                     <figure class="cards">
                         <a href="https://open.spotify.com/album/71aMemJbFvKZvb1PBrIeTi?si=RYzNiqK-TieAazOmFSxyUg" target="_blank">
-                            <img src="../media/n.jpeg">
+                            <img src="media/n.jpeg">
                         </a>
                         <figcaption>N MIXTAPE</figcaption>
                     </figure>
